=== 0.4.0 / 2011-06-18

* New features:
  * Simplified customizating styles of of exported PDFs. Added ability to
    insert custom CSS and JavaScript into the DOM before the PDF is
    rendered [closes #12]
  * Added support for images in wiki pages to be exported in PDFs [closes #10]
    (Thanks to @roykolak for the code review!)
  * Added support for rending the HTML used to create the PDF by passing
    "as_html=true" in as a URL param (eg: /Page.pdf?as_html=true) [closes #9]
  * Added nokogiri as a dependency to get around requests for protected
    assets (images, etc) (see issue #10 for details)

* Minor enhancements:
  * Fixed image-sizing issue when resolution of image is wider than
    the exported PDF [closes #11]

=== 0.3.0 / 2011-06-13

* New features
  * Added header/footer support [closes #2]
  * Implemented 'footer_enabled' and 'header_enabled' settings to
    control whether footers/headers are included [closes #3]
  * Added 'dynamic' content which can be used to customize the
    header/footer sections of exported PDFs (see TokenManager and
    TokenString for details) [closes #4]

* Minor enhancements:

  * Added testing harness
  * Updated layout to include any :header_tag content_for blocks
  * PDF content was previously not being wrapped in PDF layout...fixed
  * Threw in a fix for ul->li's showing numbers [closes #6]
  * Added Formatter class which will be used for managing PDF formatting

=== 0.2.0 / 2011-05-23

* Fixed layout & stylesheet inclusions
  * HTML template for PDF rendering was not being wrapped in a layout
  * Added ChiliPdfHelper#chili_pdf_stylesheets to inline (fix)
    CSS inclusions in generated PDFs
* Added HTML debugging (add ?debug=true to URL)
* Removed blank spaces from default filename on PDF
* Fixed 'rake chili_pdf:install' so it will remove an existing plugin
  asset directory before attempting to symlink.

== 0.1.0 2011-05-20

* 1 major enhancement:
  * Initial release