@@ -1,9 +1,11 @@
 # English strings go here for Rails i18n
 en:
   chili_pdf_instructions: 'You can customize the behavior of the ChiliPDf plugin with the settings below'
-  header_enabled_label: Display page header?
-  footer_enabled_label: Display page footer?
-  typical_plugin_settings: Typical Settings
-  advanced_plugin_settings: Technical Settings
+  typical_plugin_settings: Typical
+  advanced_plugin_settings: Technical
+  watermark_plugin_settings: Logo
+  label_header_enabled: Display page header?
+  label_footer_enabled: Display page footer?
   label_custom_css: Custom CSS
   label_custom_js: Custom JavaScript
+  label_logo_url: Logo URL
